# template-cpp-library

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: automated-unit-testing.yaml
include/template_cpp_library/: library.h
scripts/: CMakeLists.txt  check-submodules.cmake
src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  hello_test.cpp
